--- a/MyJira/MyJira/Views/Shared/_Layout.cshtml
+++ b/MyJira/MyJira/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/Content/Site.css">
     <title>@ViewBag.Title - My ASP.NET Application</title>
 
     @Styles.Render("~/Content/css")
@@ -16,8 +17,8 @@
 
 
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+<body id="background">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="height: 10%;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
