--- a/MyJira/MyJira/Views/Project/Show.cshtml
+++ b/MyJira/MyJira/Views/Project/Show.cshtml
@@ -1,40 +1,60 @@
 ﻿@model MyJira.Models.Project
 
 <div id="myjira">
-    <div class="row" id="project-main">
-        <h2>@Model.Name</h2>
-
-        Project description: <strong>@Model.Description</strong>
-        <br />
-        <i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @Model.Leader.UserName </strong>
-
+    <div class="row" id="main">
         @if (ViewBag.showButtons && (Model.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin))
         {
-            <a class="btn btn-sm btn-success" href="/Team/New/@Model.Id">Add Team</a>
-        }
-
-        @if (ViewBag.showButtons && (Model.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin))
-        {
-            <a class="btn btn-sm btn-success" href="/Project/Edit/@Model.Id">Edit Proj</a>
             using (Html.BeginForm(actionName: "Delete", controllerName: "Project", method: FormMethod.Post, routeValues: new { id = @Model.Id }, htmlAttributes: new { style = "display: inline" }))
             {
                 @Html.HttpMethodOverride(HttpVerbs.Delete)
-                <button class="btn btn-sm btn-success" type="submit">Delete Proj</button>
+                <button type="submit" class="btn btn-sm delete_proj_button">
+                    <span class="glyphicon glyphicon-trash"></span>
+                </button>
             }
+            <a class="btn btn-sm edit-proj-button" href="/Project/Edit/@Model.Id"><span class="glyphicon glyphicon-cog"></span></a>
         }
 
-        <div class="container-items">
+
+        <div style="text-align: center">
+            <p style="font-size: 60px; font-family:cursive">@Model.Name</p>
+        </div>
+
+        <div class="proj-desc">
+            <div>
+                <h4>@Model.Description</h4>
+            </div>
+        </div>
+
+        <div class="teams-container-items">
             @foreach (var team in @Model.Teams)
             {
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <div class="panel panel-default">
-                        <div class="panel-body">
-                            <strong> @team.Name</strong>
-                            <a class="btn btn-sm btn-success" href="/Team/Show/@team.Id">View more</a>
+                        <div class="panel-body" id="show-team-item">
+                            <a class="btn btn-success" id="show-team-button" href="/Team/Show/@team.Id">
+                                <strong>@team.Name</strong>
+                            </a>
                         </div>
                     </div>
                 </div>
             }
+
+            <div class="col-lg-3">
+                @if (ViewBag.showButtons && (Model.LeaderId == ViewBag.currentUser || ViewBag.userIsAdmin))
+                {
+                    <div class="panel panel-default">
+                        <div class="panel-body" id="show-team-item">
+                            <a class="btn btn-sm add-team-button" href="/Team/New/@Model.Id"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+
+        <div style="width: 75%; margin-left:auto;  margin-right:auto; margin-top:2%; position: relative">
+            <div style="position: absolute; right: 0;">
+                <i class="glyphicon glyphicon-user"> </i><i> created by </i><strong> @Model.Leader.UserName </strong>
+            </div>
         </div>
     </div>
 </div>
