--- a/MyJira/MyJira/Views/Team/New.cshtml
+++ b/MyJira/MyJira/Views/Team/New.cshtml
@@ -1,23 +1,21 @@
 ﻿
 @model MyJira.Models.Team
 
-@{
-    ViewBag.Title = "Add a new Team";
-}
+<div id="myjira">
+    <div class="row" id="add-form">
 
-<h2>@ViewBag.Title</h2>
-<br />
+        @using (Html.BeginForm(actionName: "New", controllerName: "Team"))
+        {
+            @Html.Label("Name", "Team name")
+            <br />
+            @Html.TextBox("Name", null, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Name, null, new { @class = "text-danger" })
+            <br />
 
-@using (Html.BeginForm(actionName: "New", controllerName: "Team"))
-{ 
-    @Html.Label("Name", "Team name")
-    <br />
-    @Html.TextBox("Name", null, new { @class = "form-control" })
-    @Html.ValidationMessageFor(m => m.Name, null, new { @class = "text-danger" })
-    <br />
+            @Html.HiddenFor(m => m.ProjectId)
+            <br />
 
-    @Html.HiddenFor(m => m.ProjectId)
-    <br />
-
-<button class="btn btn-sm btn-success" type="submit">Create</button>
-}
+            <button class="btn btn-sm btn-success add-button" type="submit">Create Team</button>
+        }
+    </div>
+</div>
