--- a/MyJira/MyJira/Views/Task/Edit.cshtml
+++ b/MyJira/MyJira/Views/Task/Edit.cshtml
@@ -1,48 +1,43 @@
 ﻿@model MyJira.Models.Task
 
-@{
-    ViewBag.Title2 = "Edit";
-}
+<div id="myjira">
+    <div class="row" id="add-form">
 
-<h2>@ViewBag.Title2</h2>
+        @using (Html.BeginForm(actionName: "Edit", controllerName: "Task"))
+        {
+            @Html.HttpMethodOverride(HttpVerbs.Put)
+            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
-@using (Html.BeginForm(actionName: "Edit", controllerName: "Task"))
-{
-    @Html.HttpMethodOverride(HttpVerbs.Put)
-    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+            @Html.HiddenFor(m => m.Id)
+            @Html.HiddenFor(m => m.ReporterId)
+            @Html.HiddenFor(m => m.StartTime)
+            @Html.HiddenFor(m => m.ProjectId)
+            @Html.HiddenFor(m => m.TeamId)
 
-    @Html.HiddenFor(m => m.Id)
-    @Html.HiddenFor(m => m.ReporterId)
-    @Html.HiddenFor(m => m.StartTime)
-    @Html.HiddenFor(m => m.ProjectId)
-    @Html.HiddenFor(m => m.TeamId)
+            @:<h3><span class="label label-default">@ViewBag.Project.Name</span></h3>
+            <br/>
 
-    <br />
-    @:<p><strong>Project name: </strong> <span class="label label-default">@ViewBag.Project.Name</span></p>
+            @Html.Label("Title", "Title")
+            <br />
+            @Html.EditorFor(m => m.Title)
+            @Html.ValidationMessageFor(m => m.Title, null, new { @class = "text-danger" })
+            <br />
 
+            @Html.Label("Description", "Description")
+            <br />
+            @Html.EditorFor(m => m.Description)
+            @Html.ValidationMessageFor(m => m.Description, null, new { @class = "text-danger" })
+            <br />
 
-    @Html.Label("Title", "Title")
-    <br />
-    @Html.EditorFor(m => m.Title)
-    @Html.ValidationMessageFor(m => m.Title, null, new { @class = "text-danger" })
-    <br />
-    <br />
+            <i class="glyphicon glyphicon-th-list"></i> <label>Status</label>
+            @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.allStatuses, "Value", "Text"), null, new { @class = "form-control" })
+            <br />
 
-    @Html.Label("Description", "Description")
-    <br />
-    @Html.EditorFor(m => m.Description)
-    @Html.ValidationMessageFor(m => m.Description, null, new { @class = "text-danger" })
-    <br />
-    <br />
+            <i class="glyphicon glyphicon-th-list"></i> <label>Assignee</label>
+            @Html.DropDownListFor(m => m.AssigneeId, new SelectList(ViewBag.allDevs, "Value", "Text"), "None", new { @class = "form-control" })
+            <br />
 
-    <i class="glyphicon glyphicon-th-list"></i> <label>Status</label>
-    @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.allStatuses, "Value", "Text"), null, new { @class = "form-control" })
-    <br />
-
-    <i class="glyphicon glyphicon-th-list"></i> <label>Assignee</label>
-    @Html.DropDownListFor(m => m.AssigneeId, new SelectList(ViewBag.allDevs, "Value", "Text"), "None", new { @class = "form-control" })
-    <br />
-
-    <button class="btn btn-sm btn-success" type="submit">Submit changes</button>
-}
-
+            <button class="btn btn-sm btn-success add-button" type="submit">Submit changes</button>
+        }
+    </div>
+</div>
