--- a/MyJira/MyJira/Views/User/Edit.cshtml
+++ b/MyJira/MyJira/Views/User/Edit.cshtml
@@ -1,51 +1,46 @@
 ﻿@model MyJira.Models.ApplicationUser
 
-@{
-    ViewBag.Title = "Dev Edit";
-}
 
-<h2>@ViewBag.Title</h2>
+<div id="myjira">
+    <div class="row" id="add-form">
+        @using (Html.BeginForm("Edit", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.HttpMethodOverride(HttpVerbs.Put)
+            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
 
-@using (Html.BeginForm("Edit", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.HttpMethodOverride(HttpVerbs.Put)
-    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+            @Html.HiddenFor(m => m.Id)
 
-    @Html.HiddenFor(m => m.Id)
-    <br />
-    @Html.Label("UserName", "Full Name")
-    <br />
-    @Html.EditorFor(m => m.UserName)
-    @Html.ValidationMessageFor(m => m.UserName, null, new { @class = "text-danger" })
-    <br />
-    <br />
+            @Html.Label("UserName", "Full Name")
+            <br />
+            @Html.EditorFor(m => m.UserName)
+            @Html.ValidationMessageFor(m => m.UserName, null, new { @class = "text-danger" })
+            <br />
 
-    @Html.Label("Email", "Email")
-    <br />
-    @Html.EditorFor(m => m.Email)
-    @Html.ValidationMessageFor(m => m.Email, null, new { @class = "text-danger" })
-    <br />
-    <br />
+            @Html.Label("Email", "Email")
+            <br />
+            @Html.EditorFor(m => m.Email)
+            @Html.ValidationMessageFor(m => m.Email, null, new { @class = "text-danger" })
+            <br />
 
-    @Html.Label("PhoneNumber", "Phone Number")
-    <br />
-    @Html.EditorFor(m => m.PhoneNumber)
-    <br />
-    <br />
+            @Html.Label("PhoneNumber", "Phone Number")
+            <br />
+            @Html.EditorFor(m => m.PhoneNumber)
+            <br />
 
+            <i class="glyphicon glyphicon-th-list"></i> <label>Select Team</label>
+            @Html.DropDownListFor(m => m.TeamId, new SelectList(Model.AllTeams, "Value", "Text"), null, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.TeamId, null, new { @class = "text-danger" })
+            <br />
 
-    <i class="glyphicon glyphicon-th-list"></i> <label>Select Team</label>
-    @Html.DropDownListFor(m => m.TeamId, new SelectList(Model.AllTeams, "Value", "Text"), null , new { @class = "form-control" })
-    @Html.ValidationMessageFor(m => m.TeamId, null, new { @class = "text-danger" })
-    <br />
+            <i class="glyphicon glyphicon-th-list"></i> <label>Select Role</label>
+            @Html.DropDownList("newRole", new SelectList(Model.AllRoles, "Value", "Text", (string)ViewBag.userRole), null, new { @class = "form-control" })
+            <br />
 
-    <i class="glyphicon glyphicon-th-list"></i> <label>Select Role</label>
-    @Html.DropDownList("newRole", new SelectList(Model.AllRoles, "Value", "Text", (string)ViewBag.userRole), null, new { @class = "form-control" })
-    <br />
+            <label for="file"> Upload Image:</label>
+            <input type="file" name="file" style="width: 100%;" />
+            <br />
 
-    <label for="file"> Upload Image:</label>
-    <input type="file" name="file" style="width: 100%;" />
-    <br />
-
-    <button class="btn btn-sm btn-success" type="submit">Submit changes</button>
-}
+            <button class="btn btn-sm btn-success add-button" type="submit">Submit changes</button>
+        }
+    </div>
+</div>
